<resources>
    <string name="app_name">myNotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="create_password">Create password</string>
    <string name="create">Create</string>
    <string name="login_reg">login</string>
    <string name="email_reg">email</string>
    <string name="login_header">login</string>
    <string name="password_login">password</string>
    <string name="login_btn">login</string>
    <string name="email_regg">Email</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="titles">Titles</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add Note...</string>
    <string name="password">Password</string>
    <string name="Login_header">Login_header</string>
    <string name="Login">Login_Header</string>
    <string name="login">Login</string>
    <string name="logout_hint">Logout</string>
    <string name="splashscreen_image">splashscreen image</string>

</resources>