<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:clickable="true"
    android:focusable="true"
    tools:context=".views.fragments.CreateNote_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_note"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:background="@drawable/leftbtn_background"
            android:text="@string/cancel"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_note"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@drawable/rightbtn_background"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/note_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_note"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/note_title_input"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/note_input_transparent"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColorHint="@color/black" />

                <EditText
                    android:inputType="textMultiLine"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:maxWidth="340dp"
                    android:id="@+id/note_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/note_input_transparent"
                    android:hint="@string/add_note"
                    android:textColorHint="@color/black" />


        </LinearLayout>


    </RelativeLayout>


</FrameLayout>